gap fix

--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ footer {
     background-color: hsl(0, 0%, 12%);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 20px
 }
 
 .flexbox {
